AC-967 Fixed job name in the host status fly-out. Text now wraps rather than extending beyond boundaries of pop-over. Removed status label- just show red/green dot. Clicking on ID or red/green dot shows the status dialog. When dialog closes the window.resize() watcher is restored.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -379,7 +379,7 @@ dd {
 
 .navbar>.container .navbar-brand {
   margin-left: 0;
-  margin-top: 10px;
+  margin-top: 11px;
 }
 
 /* Using inline-block rather than block keeps 
